blind index added
